--- a/style.css
+++ b/style.css
@@ -23,3 +23,14 @@ body{
     width: 300px;
     height: 300px;
 }
+h1{
+    margin-bottom: 20px;
+}
+
+h2{
+    margin: 20px 0px;
+}
+
+button{
+    text-transform: uppercase;
+}
